# Aethelgard-

./: .env.example  .gitignore  AGENTS.md  Aethelgard_Master_Plan.md  CHANGELOG.md  CODEX_RUN_NEXT_INCREMENT.txt  CODEX_SETUP_AND_AUTOMATION_GUIDE.md  LICENSE  PLAN.md  PROJECT_STATE.md  README.md  REPORT.md  VERSION.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml  symbols.yaml
docs/gates/: gate4_completion_evidence_matrix.md  gate5a_audit_runtime_evidence.md  gate5a_ci_evidence.md  gate5a_evidence_ledger.md  (+1 more)
src/: __init__.py  logging_config.py  runtime.py  settings.py
tests/: test_acquisition.py  test_audit.py  test_audit_runtime_evidence.py  test_backtest_foundation.py  test_backtest_lifecycle.py  test_backtest_replay.py  test_ci_evidence.py  test_ci_evidence_assumptions.py  test_cost_evidence.py  test_effective_rr.py  test_events.py  test_evidence_ledger_consistency.py  test_execution_context.py  test_gate4_completion_evidence_matrix.py  test_gate4_public_safety_exports.py  test_klines.py  test_operational_evidence_gate.py  test_package_metadata.py  test_paper_db_audit.py  test_performance_boundary.py  test_persistence_integration.py  test_persistence_reconciliation.py  test_phase_closure.py  test_project_state_current.py  test_public_exports.py  test_reconciliation_artifacts.py  test_reconciliation_reporting.py  test_reporting_exports.py  test_runtime.py  test_settings.py  test_stale_tick_guard.py  test_symbol_selection.py  test_validation_command_ledger_consistency.py  test_version_ledger_current.py
(+28 files in other folders)
