[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aethelgard"
version = "0.3.0"
description = "Conservative crypto futures research and PAPER-trading foundation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aethelgard contributors" }]
dependencies = [
    "python-dotenv>=1.0,<2.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0,<27.0",
    "mypy>=1.10,<2.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.11,<1.0",
    "types-PyYAML>=6.0,<7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["src", "tests", "main.py"]
